Styling All Fixed

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Account/Details.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Account/Details.razor
@@ -16,7 +16,7 @@
                 }
                 else if (_model != null)
                 {
-                    <EditForm Model="_model" OnValidSubmit="HandleUpdateDetails" Context="EditFormContext">
+                    <EditForm Model="_model" OnValidSubmit="HandleUpdateDetails" Context="editFormContext">
                         <DataAnnotationsValidator />
 
                         @if (!string.IsNullOrEmpty(_errorMessage))
