--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
@@ -8,9 +8,9 @@
         <h1 class="display-5 fw-bold text-white">Welcome to the Prediction League</h1>
         <p class="fs-4 col-md-8 mx-auto">Think you know the Premier League? Prove it. Predict the scores for every match, every week, and compete against friends and rivals to top the leaderboard.</p>
         <div class="d-flex justify-content-center align-items-center mt-4 gap-3">
-            <NavLink class="btn btn-lg green-button" href="login">Login</NavLink>
+            <NavLink class="btn btn-lg green-button" href="auth/login">Login</NavLink>
             <span class="text-white fw-bold">or</span>
-            <NavLink class="btn btn-lg green-button" href="register">Register Now</NavLink>
+            <NavLink class="btn btn-lg green-button" href="auth/register">Register Now</NavLink>
         </div>
     </div>
 </div>
@@ -39,11 +39,3 @@
         </div>
     </div>
 </div>
-
-<style>
-    .hero-image {
-        height: 110px;
-        background-color: white;
-        border-radius: 5%;
-    }
-</style>
