--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -5,6 +5,7 @@
 @import url('forms.css');
 @import url('loading.css');
 @import url('navbar.css');
+@import url('cards.css');
 
 :root {
     --pl-purple: #3D195B;
