--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout.css
@@ -30,3 +30,15 @@
     background-color: white;
     border-radius: 5%;
 }
+
+@media (max-width: 768px) {
+    .page-container, .my-details-container {
+        padding: 1em; 
+        align-items: start;
+    }
+
+    .admin-table-container, .form-container {
+        padding: 1.5rem; 
+        margin: 0;
+    }
+}
