All Pages Mobile Friendly

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/NavLayout.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/NavLayout.razor
@@ -72,7 +72,7 @@
                                 <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/admin/teams">Manage Teams</NavLink></li>
                             }
 
-                            <li class="nav-item"><hr class="text-white"/></li>
+                            <li class="nav-item no-hover"><hr class="text-white"/></li>
                         }
                     </ul>
                 </Authorized>
