--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/navbar.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/navbar.css
@@ -33,7 +33,7 @@
     border-radius: 4px;
 }
 
-    .navbar-nav > .nav-item:hover {
+    .navbar-nav > .nav-item:not(.no-hover):hover {
         background-color: white;
     }
 
