--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
-@import url('layout.css');
-@import url('tables.css');
+
 @import url('buttons.css');
+@import url('cards.css');
+@import url('dashboard.css');
 @import url('forms.css');
+@import url('layout.css');
 @import url('loading.css');
 @import url('navbar.css');
-@import url('cards.css');
+@import url('tables.css');
 
 :root {
     --pl-purple: #3D195B;
